--- a/views/bodas.html
+++ b/views/bodas.html
@@ -33,9 +33,12 @@
                 resultado profesional. Haremos que tu boda sea de ensueño y nuestras decoraciones
                 cautiven a todos los invitados </p>
         </section>
-        <section class="secbo2">
-            <img src="../assets/images/bodaspictures/restaurant-7598663_1280.jpg" alt="arreglo floral para boda" class="noviapic">
-        </section>
+        <!-- Aunque haya cambiado el section por un div, mantengo los nombres orignales de las clases
+        porque me resulta más cómodo saber su orden y posición en los los estilos si los nombro así -->
+        <div class="secbo2">
+            <img src="../assets/images/bodaspictures/restaurant-7598663_1280.jpg" alt="arreglo floral para boda" class="noviapic"
+            width="1280" height="853">
+        </div>
         <section class="secbo3">
             <h2>Ramos de novia</h2>
             <p>Para el día más especial de tu vida, confía en nuestros floristas. Aseguraremos una
@@ -45,12 +48,13 @@
                 Nuestros ramos de novia son únicos y personalizados, elaborados con flores frescas
                 y de alta calidad. Nos aseguraremos de que tu ramo sea una obra de arte que complemente
                 tu look y que te haga sentir especial en tu gran día. </p>
-            </p>
+          
         </section>
-        <section class="secbo4">
-            <img src="../assets/images/bodaspictures/ramo-de-novia-en-manos-de-la-novia.jpg" alt="ramo y zapatos de novia" class="noviapic2">
+        <div class="secbo4">
+            <img src="../assets/images/bodaspictures/ramo-de-novia-en-manos-de-la-novia.jpg" alt="ramo y zapatos de novia" class="noviapic2"
+            width="3784" height="2523">
 
-        </section>
+        </div>
         <section class="secbo5">
             <h2>Precios</h2>
             <table >
