--- a/views/contacto.html
+++ b/views/contacto.html
@@ -25,9 +25,10 @@
     <main>
 
         <section class="secmap">
-            <h2>Solicite más información</h2>
+          <h2>Solicite más información</h2>
           <h2>Encuentra tu tienda</h2>
-          <img src="../assets/images/Map.jpg" alt="mapa de la tienda" class="mapa">
+          <img src="../assets/images/Map.jpg" alt="mapa de la tienda" class="mapa"
+          width="1312" height="676">
         </section>
         <section class="infocontacto">
           <h2>Información de contacto</h2>
@@ -63,5 +64,6 @@
           
         <p class="pie">&copy; 2025 Floristerías Eva</p>
         <a class="faviconlink" href="https://www.flaticon.com/free-icons/flower" title="flower icons">Flower icons created by bqlqn - Flaticon</a>
+    </footer>
 </body>
 </html>
