--- a/views/funerales.html
+++ b/views/funerales.html
@@ -34,9 +34,10 @@
                 mensaje para acompañar la corona.
           </p>
         </section>
-        <section class="secfu2">
-          <img src="../assets/images/funeralpictures/flowers-4839339_640.jpg" alt="corona de flores" class="coronapic">
-        </section>
+        <div class="secfu2">
+          <img src="../assets/images/funeralpictures/flowers-4839339_640.jpg" alt="corona de flores" class="coronapic"
+          width="640" height="426">
+        </div>
         <section class="secfu3">
             <h2>Precios</h2>
             <table >
