--- a/views/galeria.html
+++ b/views/galeria.html
@@ -27,40 +27,71 @@
             <h2>Catálogo Primavera 2025</h2>
             
         </section>
-        <section class="sectgale"> <!-- Galería de imágenes, el nombre sectgale viene de section + galeria -->
+        <div class="sectgale"> <!-- Galería de imágenes, el nombre sectgale viene de section + galeria -->
           <figure>
-            <img src="../assets/images/galeriapictures/flowers-3992879_640.jpg" alt="adorno de flores fucsias" class="galepic gale1">
-            <details>Ideal como regalo para el dia de la madre <br>Precio 21€</details>
+            <img src="../assets/images/galeriapictures/flowers-3992879_640.jpg" alt="adorno de flores fucsias" class="galepic gale1"
+            width="640" height="427">
+            <details>
+              <summary>Ver más</summary>
+              Ideal como regalo para el dia de la madre <br>Precio 21€
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/flowers-7233987_640.jpg" alt="adorno de flores naranjas" class="galepic gale2">
-            <details>Hermoso surtido de flores frescas para decorar tus mesas <br>Precio según tipo de flores y unidades</details>
+            <img src="../assets/images/galeriapictures/flowers-7233987_640.jpg" alt="adorno de flores naranjas" class="galepic gale2"
+            width="640" height="427">
+            <details>
+              <summary>Ver más</summary>
+              Hermoso surtido de flores frescas para decorar tus mesas <br>Precio según tipo de flores y unidades
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/houseplant-7367379_1280.jpg" alt="adorno de hogar" class="galepic gale3">
-            <details>Planta decorativa de fácil cuidado<br>Precio 37€</details>
+            <img src="../assets/images/galeriapictures/houseplant-7367379_1280.jpg" alt="adorno de hogar" class="galepic gale3"
+            width="960" height="1280">
+            <details>
+              <summary>Ver más</summary>
+              Planta decorativa de fácil cuidado<br>Precio 37€ 
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/hydrangeas-7207660_640.jpg" alt="centro de mesa plantas rosas" class="galepic gale4">
-            <details>Decoración de celebraciones<br>Precio 31€/ud</details>
+            <img src="../assets/images/galeriapictures/hydrangeas-7207660_640.jpg" alt="centro de mesa plantas rosas" class="galepic gale4"
+            width="640" height="427">
+            <details>
+              <summary>Ver más</summary>
+              Decoración de celebraciones<br>Precio 31€/ud
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/pexels-sumcig-31853169.jpg" alt="lirio amarillo decorativo" class="galepic gale5">
-            <details>Hermoso lirio ideal para jarrones pequeños <br>Precio 7€</details>
+            <img src="../assets/images/galeriapictures/pexels-sumcig-31853169.jpg" alt="lirio amarillo decorativo" class="galepic gale5"
+            width="2500" height="3125">
+            <details>
+              <summary>Ver más</summary>
+              Hermoso lirio ideal para jarrones pequeños <br>Precio 7€</details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/plant-3228944_1280.jpg" alt="maceta de flores naranjas" class="galepic gale6">
-            <details>Decoraión de hogar <br>Precio 14€</details>
+            <img src="../assets/images/galeriapictures/plant-3228944_1280.jpg" alt="maceta de flores naranjas" class="galepic gale6"
+            width="1280" height="853">
+            <details>
+              <summary>Ver más</summary>
+              Decoraión de hogar <br>Precio 14€
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/primer-disparo-de-un-ramo-de-novia-en-una-hoja-blanca-con-colores-blanco-rosa-y-verde.jpg" alt="hermoso ramo de novia sobre sabanas blancas" class="galepic gale7">                  
-            <details>Ramo de novia <br>Precio 35€</details>
+            <img src="../assets/images/galeriapictures/primer-disparo-de-un-ramo-de-novia-en-una-hoja-blanca-con-colores-blanco-rosa-y-verde.jpg" alt="hermoso ramo de novia sobre sabanas blancas" class="galepic gale7"
+            width="4256" height="2832">                  
+            <details>
+              <summary>Ver más</summary>
+              Ramo de novia <br>Precio 35€
+            </details>
           </figure>
           <figure>
-            <img src="../assets/images/galeriapictures/real-estate-9327794_640.jpg" alt="jarron de flores para hogar" class="galepic gale8">
-            <details>Sencillo jarrón de flores,ideal como regalo o para decorar tu hogar <br>Precio 21€</details>
+            <img src="../assets/images/galeriapictures/real-estate-9327794_640.jpg" alt="jarron de flores para hogar" class="galepic gale8"
+            width="427" height="640">
+            <details>
+              <summary>Ver más</summary>
+              Sencillo jarrón de flores,ideal como regalo o para decorar tu hogar <br>Precio 21€
+            </details>
           </figure>
-        </section>
+        </div>
           
         <section>
             <h2>Promoción hogar</h2>
