--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -29,7 +29,7 @@
             <h2 >Solicite más información</h2>
         </section>
       
-        <section class="container">  
+        <div class="container">  
             <form id="myForm" name="myForm" action="#" method="get" target="_self">
                 <ul class="flex-outer">
                     <li>
@@ -74,7 +74,7 @@
                     </li>
                 </ul>
             </form>
-        </section>
+        </div>
       
       
     </main>
