--- a/views/galeria.html
+++ b/views/galeria.html
@@ -9,121 +9,120 @@
     <link rel="icon" href="./../assets/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <h1>Foristerías Eva</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="./../index.html">Inicio</a></li>
-            <li><a href="./bodas.html">Bodas</a></li>
-            <li><a href="./funerales.html">Funerales</a></li>
-            <li><a class="ain" href="#">Galeria</a></li>
-            <li><a href="./presupuestos.html">Presupuestos</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <h2>Catálogo Primavera 2025</h2>
-            
-        </section>
-        <div class="sectgale"> <!-- Galería de imágenes, el nombre sectgale viene de section + galeria -->
-          <figure>
-            <img src="../assets/images/galeriapictures/flowers-3992879_640.jpg" alt="adorno de flores fucsias" class="galepic gale1"
-            width="640" height="427">
-            <details>
-              <summary>Ver más</summary>
-              Ideal como regalo para el dia de la madre <br>Precio 21€
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/flowers-7233987_640.jpg" alt="adorno de flores naranjas" class="galepic gale2"
-            width="640" height="427">
-            <details>
-              <summary>Ver más</summary>
-              Hermoso surtido de flores frescas para decorar tus mesas <br>Precio según tipo de flores y unidades
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/houseplant-7367379_1280.jpg" alt="adorno de hogar" class="galepic gale3"
-            width="960" height="1280">
-            <details>
-              <summary>Ver más</summary>
-              Planta decorativa de fácil cuidado<br>Precio 37€ 
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/hydrangeas-7207660_640.jpg" alt="centro de mesa plantas rosas" class="galepic gale4"
-            width="640" height="427">
-            <details>
-              <summary>Ver más</summary>
-              Decoración de celebraciones<br>Precio 31€/ud
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/pexels-sumcig-31853169.jpg" alt="lirio amarillo decorativo" class="galepic gale5"
-            width="2500" height="3125">
-            <details>
-              <summary>Ver más</summary>
-              Hermoso lirio ideal para jarrones pequeños <br>Precio 7€</details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/plant-3228944_1280.jpg" alt="maceta de flores naranjas" class="galepic gale6"
-            width="1280" height="853">
-            <details>
-              <summary>Ver más</summary>
-              Decoraión de hogar <br>Precio 14€
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/primer-disparo-de-un-ramo-de-novia-en-una-hoja-blanca-con-colores-blanco-rosa-y-verde.jpg" alt="hermoso ramo de novia sobre sabanas blancas" class="galepic gale7"
-            width="4256" height="2832">                  
-            <details>
-              <summary>Ver más</summary>
-              Ramo de novia <br>Precio 35€
-            </details>
-          </figure>
-          <figure>
-            <img src="../assets/images/galeriapictures/real-estate-9327794_640.jpg" alt="jarron de flores para hogar" class="galepic gale8"
-            width="427" height="640">
-            <details>
-              <summary>Ver más</summary>
-              Sencillo jarrón de flores,ideal como regalo o para decorar tu hogar <br>Precio 21€
-            </details>
-          </figure>
-        </div>
-          
-        <section>
-            <h2>Promoción hogar</h2>
-            <p>Esta primavera, disfrute de nuestros maravillosos descuentos en plantas para la decoración de hogar, no dude en consultar a nuestros profesionales sobre cualquier duda con respecto al cuidado de su planta.</p>
-        </section>
-    </main>
-    <footer>
-        <h2 class="redesso">Redes Sociales</h2>
-        <p>Síguenos en nuestras redes sociales para estar al tanto de nuestras novedades y promociones.</p>
-        <ul class="socialmedia">
-            <li><a href="#">Facebook:floristeriaseva.facebook.com</a></li>
-            <li><a href="#">Instagram:floristeriaseva.instagram.com</a></li>
-            <li><a href="#">LinkedIn:floristeriaseva.linkedin.com</a></li>
-            <li><a href="#">Pinterest:floristeriaseva.pinterest.com</a></li>
-        </ul>
-        <div class="social-icons">
-            <a href="https://facebook.com" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook" width="30" height="30">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram" width="30" height="30">
-            </a>
-            <a href="https://linkedin.com" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" width="30" height="30">
-            </a>
-            <a href="https://pinterest.com" target="_blank">
-              <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/pinterest.svg" alt="Pinterest" width="30" height="30">
-            </a>
-          </div>
-        <p class="pie">&copy; 2025 Floristerías Eva</p>
-        <a class="faviconlink" href="https://www.flaticon.com/free-icons/flower" title="flower icons">Flower icons created by bqlqn - Flaticon</a>
-    </footer>
+  <header>
+    <h1>Foristerías Eva</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="./../index.html">Inicio</a></li>
+      <li><a href="./bodas.html">Bodas</a></li>
+      <li><a href="./funerales.html">Funerales</a></li>
+      <li><a class="ain" href="#">Galeria</a></li>
+      <li><a href="./presupuestos.html">Presupuestos</a></li>
+      <li><a href="./contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section>
+      <h2>Catálogo Primavera 2025</h2>
+    </section>
+      <div class="sectgale"> <!-- Galería de imágenes, el nombre sectgale viene de section + galeria -->
+        <figure>
+          <img src="../assets/images/galeriapictures/flowers-3992879_640.jpg" alt="adorno de flores fucsias" class="galepic gale1"
+          width="640" height="427">
+          <details>
+            <summary>Ver más</summary>
+            Ideal como regalo para el dia de la madre <br>Precio 21€
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/flowers-7233987_640.jpg" alt="adorno de flores naranjas" class="galepic gale2"
+          width="640" height="427">
+          <details>
+            <summary>Ver más</summary>
+            Hermoso surtido de flores frescas para decorar tus mesas <br>Precio según tipo de flores y unidades
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/houseplant-7367379_1280.jpg" alt="adorno de hogar" class="galepic gale3"
+          width="960" height="1280">
+          <details>
+            <summary>Ver más</summary>
+            Planta decorativa de fácil cuidado<br>Precio 37€ 
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/hydrangeas-7207660_640.jpg" alt="centro de mesa plantas rosas" class="galepic gale4"
+          width="640" height="427">
+          <details>
+            <summary>Ver más</summary>
+            Decoración de celebraciones<br>Precio 31€/ud
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/pexels-sumcig-31853169.jpg" alt="lirio amarillo decorativo" class="galepic gale5"
+          width="2500" height="3125">
+          <details>
+            <summary>Ver más</summary>
+            Hermoso lirio ideal para jarrones pequeños <br>Precio 7€
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/plant-3228944_1280.jpg" alt="maceta de flores naranjas" class="galepic gale6"
+          width="1280" height="853">
+          <details>
+            <summary>Ver más</summary>
+            Decoraión de hogar <br>Precio 14€
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/primer-disparo-de-un-ramo-de-novia-en-una-hoja-blanca-con-colores-blanco-rosa-y-verde.jpg" alt="hermoso ramo de novia sobre sabanas blancas" class="galepic gale7"
+          width="4256" height="2832">                  
+          <details>
+            <summary>Ver más</summary>
+            Ramo de novia <br>Precio 35€
+          </details>
+        </figure>
+        <figure>
+          <img src="../assets/images/galeriapictures/real-estate-9327794_640.jpg" alt="jarron de flores para hogar" class="galepic gale8"
+          width="427" height="640">
+          <details>
+            <summary>Ver más</summary>
+            Sencillo jarrón de flores,ideal como regalo o para decorar tu hogar <br>Precio 21€
+          </details>
+        </figure>
+      </div>
+      <section>
+        <h2>Promoción hogar</h2>
+        <p>Esta primavera, disfrute de nuestros maravillosos descuentos en plantas para la decoración de hogar, no dude en consultar a nuestros profesionales sobre cualquier duda con respecto al cuidado de su planta.</p>
+      </section>
+  </main>
+  <footer>
+    <h2 class="redesso">Redes Sociales</h2>
+    <p>Síguenos en nuestras redes sociales para estar al tanto de nuestras novedades y promociones.</p>
+    <ul class="socialmedia">
+      <li><a href="#">Facebook:floristeriaseva.facebook.com</a></li>
+      <li><a href="#">Instagram:floristeriaseva.instagram.com</a></li>
+      <li><a href="#">LinkedIn:floristeriaseva.linkedin.com</a></li>
+      <li><a href="#">Pinterest:floristeriaseva.pinterest.com</a></li>
+    </ul>
+    <div class="social-icons">
+      <a href="https://facebook.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook" width="30" height="30">
+      </a>
+      <a href="https://instagram.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram" width="30" height="30">
+      </a>
+      <a href="https://linkedin.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" width="30" height="30">
+      </a>
+      <a href="https://pinterest.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/pinterest.svg" alt="Pinterest" width="30" height="30">
+      </a>
+    </div>
+    <p class="pie">&copy; 2025 Floristerías Eva</p>
+    <a class="faviconlink" href="https://www.flaticon.com/free-icons/flower" title="flower icons">Flower icons created by bqlqn - Flaticon</a>
+  </footer>
     
        
     
